--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-GOOGLE_MAPS_API_KEY=    # https://developers.google.com/maps/documentation/embed/quickstart#enable-api-sdk
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=    # https://developers.google.com/maps/documentation/embed/quickstart#enable-api-sdk
+NEXT_PUBLIC_YOUTUBE_API_KEY=        # https://developers.google.com/youtube/v3/getting-started
+NEXT_PUBLIC_CHANNEL_ID=UCy_Eez7ZamDM31jOTRvqrWw
