--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.59.17",
     "dotenv": "^16.4.5",
     "gapi-script": "^1.2.0",
